--- a/src/app/photo-grid/photo-grid.component.html
+++ b/src/app/photo-grid/photo-grid.component.html
@@ -1,5 +1,7 @@
+<div class="photoview-background">
 <ul class="mdc-image-list mdc-image-list--masonry my-masonry-image-list">
   <li class="mdc-image-list__item" *ngFor="let image of images">
-    <img class="mdc-image-list__image image-list-item-container" src={{image}}>
+    <img class="mdc-image-list__image image-list-item-container" src={{image}} (click)="openPhotoModal(image)">
   </li>
 </ul>
+</div>
