--- a/src/app/photo-grid/photo-grid.component.scss
+++ b/src/app/photo-grid/photo-grid.component.scss
@@ -1,7 +1,7 @@
 @import "~@angular-mdc/theme/material";
 
 .my-masonry-image-list {
-  @include mdc-image-list-masonry-columns(5, 20px);
+  @include mdc-image-list-masonry-columns(4, 15px);
    padding-top: 25px;
    padding-left: 100px;
    padding-right: 100px;
@@ -12,4 +12,12 @@
   border-style: solid;
   border-width: 5px;
   border-color: #DDDDDD;
+}
+
+.photoview-background {
+  background-image: linear-gradient(rgba(255,255,255,.3), rgba(255,255,255,0.8)), url("http://localhost:5000/images/24.png.raw");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
 }
