added modal routing

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar class="mat-elevation-z5" color='primary'>
   <span>Welcome!</span>
   <nav class="toolbar-nav-buttons">
     <button mat-flat-button color="primary" routerLink="/photos">Photos</button>
@@ -7,5 +7,5 @@
   <!-- This fills the remaining space of the current row -->
   <span class="toolbar-fill-remaining-space"></span>
 
-  <span>Right Aligned Text</span>
+  <span>Photostream Website</span>
 </mat-toolbar>
