--- a/src/app/photo-grid/photo-grid.component.scss
+++ b/src/app/photo-grid/photo-grid.component.scss
@@ -14,6 +14,12 @@
   border-color: #DDDDDD;
 }
 
+.mat-elevation-z5 {
+  border-radius: 30px;
+   position: relative;
+   z-index: 2;
+}
+
 .photoview-background {
   background-image: linear-gradient(rgba(255,255,255,.3), rgba(255,255,255,0.8)), url("http://localhost:5000/images/24.png.raw");
   background-repeat: no-repeat;
