fixed backend server to respond to filenames from front

--- a/src/app/photo-grid/photo-grid.component.html
+++ b/src/app/photo-grid/photo-grid.component.html
@@ -1,7 +1,7 @@
 <div class="photoview-background">
 <ul class="mdc-image-list mdc-image-list--masonry my-masonry-image-list">
-  <li class="mdc-image-list__item mat-elevation-z5" *ngFor="let image of images" routerLinkActive="active">
-    <img class="mdc-image-list__image image-list-item-container" src={{image}} routerLink="/photos" [queryParams]="{img: image}">
+  <li class="mdc-image-list__item mat-elevation-z5" *ngFor="let imageName of imageNames" routerLinkActive="active">
+    <img class="mdc-image-list__image image-list-item-container" src="{{this.imageService.getImage(imageName, true)}}" routerLink="/photos" [queryParams]="{img: imageName}">
   </li>
 </ul>
 </div>
