--- a/src/app/photo-grid/photo-grid.component.scss
+++ b/src/app/photo-grid/photo-grid.component.scss
@@ -2,20 +2,22 @@
 
 .my-masonry-image-list {
   @include mdc-image-list-masonry-columns(4, 15px);
-   padding-top: 25px;
+   padding-top: 30px;
    padding-left: 100px;
    padding-right: 100px;
 }
 
 .image-list-item-container {
-  border-radius: 30px;
+  border-radius: 15px;
   border-style: solid;
-  border-width: 5px;
+  border-width: 2px;
+//  border-top-left-radius: 500px;
+//  border-bottom-right-radius: 500px;
   border-color: #DDDDDD;
 }
 
 .mat-elevation-z5 {
-  border-radius: 30px;
+   border-radius: 15px;
    position: relative;
    z-index: 2;
 }
