--- a/src/app/photo-modal/photo-modal.component.html
+++ b/src/app/photo-modal/photo-modal.component.html
@@ -4,7 +4,6 @@
 <!--  <button mat-button [mat-dialog-close]="senddata">Close</button> -->
   <button mat-icon-button color="warn" (click)="onLike()">
     <mat-icon aria-label="Example icon-button with a heart icon">favorite</mat-icon>
+    {{rating}}
   </button>
-  <span class="span-fill-remaining-space"></span>
-  <button mat-stroked-button >{{rating}}</button>
 </div>
