--- a/src/app/photo-grid/photo-grid.component.scss
+++ b/src/app/photo-grid/photo-grid.component.scss
@@ -31,50 +31,16 @@
 }
 
 .image-list-item-container {
-  border-radius: 15px;
-  border-style: solid;
-  border-width: 2px;
+  border-radius: 10px;
+  border-style: hidden;
+//  border-width: 4px;
 //  border-top-left-radius: 500px;
 //  border-bottom-right-radius: 500px;
-  border-color: #DDDDDD;
+//  border-color: #DDDDDD;
 }
 
 .mat-elevation-z5 {
-   border-radius: 15px;
+   border-radius: 10px;
    position: relative;
    z-index: 2;
 }
-
-/*
-@import "~@angular-mdc/theme/material";
-
-.my-masonry-image-list {
-  @include mdc-image-list-masonry-columns(4, 15px);
-   padding-top: 30px;
-   padding-left: 100px;
-   padding-right: 100px;
-}
-
-.image-list-item-container {
-  border-radius: 15px;
-  border-style: solid;
-  border-width: 2px;
-//  border-top-left-radius: 500px;
-//  border-bottom-right-radius: 500px;
-  border-color: #DDDDDD;
-}
-
-.mat-elevation-z5 {
-   border-radius: 15px;
-   position: relative;
-   z-index: 2;
-}
-
-.photoview-background {
-  background-image: linear-gradient(rgba(255,255,255,.3), rgba(255,255,255,0.8)), url("http://localhost:5000/images/24.png.raw");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  background-size: cover;
-}
-*/
