--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
-<mat-toolbar class="mat-elevation-z5" color='primary'>
+<mat-toolbar class="mat-elevation-z2 toolbar-transparent">
   <span>Welcome!</span>
   <nav class="toolbar-nav-buttons">
-    <button mat-flat-button color="primary" routerLink="/photos">Photos</button>
-    <button mat-flat-button color="primary" routerLink="/about">About</button>
+    <button mat-button color="grey" routerLink="/photos">Photos</button>
+    <button mat-button color="grey" routerLink="/about">About</button>
   </nav>
   <!-- This fills the remaining space of the current row -->
   <span class="toolbar-fill-remaining-space"></span>
