--- a/src/app/photo-grid/photo-grid.component.scss
+++ b/src/app/photo-grid/photo-grid.component.scss
@@ -1,14 +1,35 @@
 
 ngx-masonry {
   padding: 20px;
+  padding-top: 50px;
   margin: 0 auto;
 }
 
 .image-list-item-container {
-  display: block;
-  max-width: 100%;
+  //display: block;
+  max-width: 100%; // this fixes automatic resize of images on narrow windows
 }
 
 ngxMasonryItem {
-  padding-bottom: 20px;
+  padding-bottom: 15px; // vertical gutter
+}
+
+ngxMasonryItem:focus {
+  outline: none; // removes ugly focus dotted border
+}
+
+/*
+.image-list-item-container {
+  border-radius: 10px;
+  border-style: none;
+  border-width: 2px;
+  border-top-left-radius: 500px;
+  border-bottom-right-radius: 500px;
+  border-color: #DDDDDD;
+}
+*/
+.mat-elevation-z5 {
+  // border-radius: 10px;
+   position: relative;
+   z-index: 2;
 }
