added custom theme, themed photo modal a bit

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="mat-elevation-z2 toolbar-transparent">
+<mat-toolbar class="mat-elevation-z2" color="primary">
   <span>Welcome!</span>
   <nav class="toolbar-nav-buttons">
     <button mat-button color="grey" routerLink="/photos">Photos</button>
