--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,3 +16,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   padding: 10;
   background-color: mat-color($photo-app-primary);
 }
+
+.cdk-overlay-backdrop.cdk-overlay-backdrop-showing {
+  &.dark-backdrop {
+    background: #000;
+    opacity: 0.3 !important;
+  }
+}
