--- a/src/app/photo-modal/photo-modal.component.scss
+++ b/src/app/photo-modal/photo-modal.component.scss
@@ -29,3 +29,12 @@ img {
        .overlay-content {
          padding: 1em;
        }
+
+       .white-icon {
+         color: white;
+}
+
+.likes-text {
+  color: white;
+  padding-left: 5px;
+}
