added bkg image to assets and converted to jpeg for faster load. added screenshots to repo

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .photoview-background {
-  background-image: linear-gradient(rgba(255,255,255,.3), rgba(255,255,255,0.8)), url("http://localhost:5000/images/raw/bike-trip-sweden---italy-2018_42445058455_o.png"); //TODO: URL
+  background-image: linear-gradient(rgba(255,255,255,.3), rgba(255,255,255,0.8)), url('../assets/background-img.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
