started music tab

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,6 +2,7 @@
   <span>Welcome!</span>
   <nav class="toolbar-nav-buttons">
     <button mat-button color="grey" routerLink="/photos">Photos</button>
+    <button mat-button color="grey" routerLink="/music">Music</button>
     <button mat-button color="grey" routerLink="/about">About</button>
   </nav>
   <!-- This fills the remaining space of the current row -->
